Fix broken alignment by removing message container's width

--- a/main.css
+++ b/main.css
@@ -27,7 +27,6 @@ h1 {
 }
 
 .main {
-  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
